bug servico resolvido

--- a/note.ipynb
+++ b/note.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,16 +31,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('./data/vagas_tratas_02-06-22.csv', sep='^')"
+    "df = pd.read_csv('./data/vagas_tratas_03-06-22.csv', sep='^')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -48,38 +48,272 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 108 entries, 0 to 107\n",
+      "RangeIndex: 122 entries, 0 to 121\n",
       "Data columns (total 21 columns):\n",
       " #   Column                  Non-Null Count  Dtype  \n",
       "---  ------                  --------------  -----  \n",
-      " 0   Unnamed: 0              108 non-null    int64  \n",
-      " 1   id                      108 non-null    int64  \n",
-      " 2   titulo                  108 non-null    object \n",
-      " 3   empresa                 108 non-null    object \n",
-      " 4   local                   108 non-null    object \n",
-      " 5   descricao               108 non-null    object \n",
-      " 6   local_trabalho          108 non-null    int64  \n",
-      " 7   recrutador              56 non-null     object \n",
-      " 8   aceita_inscricao        90 non-null     object \n",
-      " 9   candidatos              108 non-null    int64  \n",
+      " 0   Unnamed: 0              122 non-null    int64  \n",
+      " 1   id                      122 non-null    int64  \n",
+      " 2   titulo                  122 non-null    object \n",
+      " 3   empresa                 122 non-null    object \n",
+      " 4   local                   122 non-null    object \n",
+      " 5   local_trabalho          122 non-null    int64  \n",
+      " 6   recrutador              65 non-null     object \n",
+      " 7   aceita_inscricao        102 non-null    object \n",
+      " 8   descricao               122 non-null    object \n",
+      " 9   candidatos              122 non-null    int64  \n",
       " 10  data_publicacao         18 non-null     object \n",
-      " 11  aberta                  108 non-null    int64  \n",
-      " 12  servico                 108 non-null    object \n",
-      " 13  tipo_contratacao        58 non-null     float64\n",
-      " 14  quantidade_funcionario  50 non-null     float64\n",
-      " 15  correspondente          4 non-null      float64\n",
-      " 16  conexao_ensino          6 non-null      float64\n",
-      " 17  recrutando_agora        5 non-null      float64\n",
-      " 18  selo_competencia        2 non-null      float64\n",
-      " 19  conexoes                5 non-null      float64\n",
+      " 11  aberta                  122 non-null    int64  \n",
+      " 12  servico                 122 non-null    object \n",
+      " 13  tipo_contratacao        67 non-null     float64\n",
+      " 14  quantidade_funcionario  58 non-null     float64\n",
+      " 15  correspondente          3 non-null      float64\n",
+      " 16  recrutando_agora        5 non-null      float64\n",
+      " 17  selo_competencia        3 non-null      float64\n",
+      " 18  conexao_ensino          8 non-null      float64\n",
+      " 19  conexoes                6 non-null      float64\n",
       " 20  nivel_cargo             1 non-null      float64\n",
       "dtypes: float64(8), int64(5), object(8)\n",
-      "memory usage: 17.8+ KB\n"
+      "memory usage: 20.1+ KB\n"
      ]
     }
    ],
    "source": [
     "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>id</th>\n",
+       "      <th>titulo</th>\n",
+       "      <th>empresa</th>\n",
+       "      <th>local</th>\n",
+       "      <th>local_trabalho</th>\n",
+       "      <th>recrutador</th>\n",
+       "      <th>aceita_inscricao</th>\n",
+       "      <th>descricao</th>\n",
+       "      <th>candidatos</th>\n",
+       "      <th>data_publicacao</th>\n",
+       "      <th>aberta</th>\n",
+       "      <th>servico</th>\n",
+       "      <th>tipo_contratacao</th>\n",
+       "      <th>quantidade_funcionario</th>\n",
+       "      <th>correspondente</th>\n",
+       "      <th>recrutando_agora</th>\n",
+       "      <th>selo_competencia</th>\n",
+       "      <th>conexao_ensino</th>\n",
+       "      <th>conexoes</th>\n",
+       "      <th>nivel_cargo</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3101701349</td>\n",
+       "      <td>DATA ANALYST PLENO</td>\n",
+       "      <td>Confidencial</td>\n",
+       "      <td>Brasil</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Geizibete Ribeiro 2°</td>\n",
+       "      <td>Não aceita mais candidaturas</td>\n",
+       "      <td>Sobre a vaga\\nEmpresa multinacional americana,...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>nao mencionado</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3100401639</td>\n",
+       "      <td>Analista BI</td>\n",
+       "      <td>PARLA! Contact Center</td>\n",
+       "      <td>Carapicuíba, São Paulo, Brasil</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Viviane Pontes</td>\n",
+       "      <td>Não aceita mais candidaturas</td>\n",
+       "      <td>Sobre a vaga\\nRequisitos:\\n\\nConhecimento de S...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>nao mencionado</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3102104363</td>\n",
+       "      <td>Analista de Power BI</td>\n",
+       "      <td>Special</td>\n",
+       "      <td>Barueri, São Paulo, Brasil</td>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Sobre a vaga\\nQuem nós somos?\\nSomos um grupo ...</td>\n",
+       "      <td>200</td>\n",
+       "      <td>02/06/22</td>\n",
+       "      <td>1</td>\n",
+       "      <td>nao mencionado</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3100056434</td>\n",
+       "      <td>Business Data Analyst Senior</td>\n",
+       "      <td>Remessa Online</td>\n",
+       "      <td>São Paulo, Brasil</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Não aceita mais candidaturas</td>\n",
+       "      <td>Sobre a vaga\\nSobre a Remessa Online 🌏\\n.\\nSom...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>nao mencionado</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>3094190057</td>\n",
+       "      <td>Analista de BI</td>\n",
+       "      <td>Grupo Nexxees</td>\n",
+       "      <td>São Paulo, Brasil</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Pedro Henrique F de Jesus</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Sobre a vaga\\nO Grupo Nexxees está há 29 anos ...</td>\n",
+       "      <td>34</td>\n",
+       "      <td>27/05/22</td>\n",
+       "      <td>1</td>\n",
+       "      <td>nao mencionado</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0          id                        titulo  \\\n",
+       "0           0  3101701349            DATA ANALYST PLENO   \n",
+       "1           1  3100401639                   Analista BI   \n",
+       "2           2  3102104363          Analista de Power BI   \n",
+       "3           3  3100056434  Business Data Analyst Senior   \n",
+       "4           4  3094190057                Analista de BI   \n",
+       "\n",
+       "                 empresa                           local  local_trabalho  \\\n",
+       "0           Confidencial                          Brasil               2   \n",
+       "1  PARLA! Contact Center  Carapicuíba, São Paulo, Brasil               1   \n",
+       "2                Special      Barueri, São Paulo, Brasil               3   \n",
+       "3         Remessa Online               São Paulo, Brasil               2   \n",
+       "4          Grupo Nexxees               São Paulo, Brasil               1   \n",
+       "\n",
+       "                  recrutador              aceita_inscricao  \\\n",
+       "0       Geizibete Ribeiro 2°  Não aceita mais candidaturas   \n",
+       "1             Viviane Pontes  Não aceita mais candidaturas   \n",
+       "2                        NaN                           NaN   \n",
+       "3                        NaN  Não aceita mais candidaturas   \n",
+       "4  Pedro Henrique F de Jesus                           NaN   \n",
+       "\n",
+       "                                           descricao  candidatos  \\\n",
+       "0  Sobre a vaga\\nEmpresa multinacional americana,...           0   \n",
+       "1  Sobre a vaga\\nRequisitos:\\n\\nConhecimento de S...           0   \n",
+       "2  Sobre a vaga\\nQuem nós somos?\\nSomos um grupo ...         200   \n",
+       "3  Sobre a vaga\\nSobre a Remessa Online 🌏\\n.\\nSom...           0   \n",
+       "4  Sobre a vaga\\nO Grupo Nexxees está há 29 anos ...          34   \n",
+       "\n",
+       "  data_publicacao  aberta         servico  tipo_contratacao  \\\n",
+       "0             NaN       0  nao mencionado               3.0   \n",
+       "1             NaN       0  nao mencionado               3.0   \n",
+       "2        02/06/22       1  nao mencionado               1.0   \n",
+       "3             NaN       0  nao mencionado               NaN   \n",
+       "4        27/05/22       1  nao mencionado               1.0   \n",
+       "\n",
+       "   quantidade_funcionario  correspondente  recrutando_agora  selo_competencia  \\\n",
+       "0                     9.0             NaN               NaN               NaN   \n",
+       "1                     7.0             NaN               NaN               NaN   \n",
+       "2                     4.0             NaN               NaN               NaN   \n",
+       "3                     NaN             NaN               NaN               NaN   \n",
+       "4                     5.0             1.0               NaN               NaN   \n",
+       "\n",
+       "   conexao_ensino  conexoes  nivel_cargo  \n",
+       "0             NaN       NaN          NaN  \n",
+       "1             NaN       NaN          NaN  \n",
+       "2             NaN       NaN          NaN  \n",
+       "3             NaN       NaN          NaN  \n",
+       "4             NaN       NaN          NaN  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
    ]
   }
  ],
